<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".activities.SettingsActivity">
    <ProgressBar
        android:id="@+id/settings_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/departmentStaticSmallLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_department"
        android:textColor="#777777"
        android:textSize="22px"
        />
    <Spinner
        android:id="@+id/spinnerDepartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/specialtyStaticSmallLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_specialty"
        android:textColor="#777777"
        android:textSize="22px"
        />
    <Spinner
        android:id="@+id/spinnerSpecialty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/GroupStaticSmallLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_group"
            android:textColor="#777777"
            android:textSize="22px"
            />
        <Spinner
            android:id="@+id/spinnerGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dropdown" />
</LinearLayout>
